expands quiz mode
